--- a/babysitting_app/templates/layouts/base.html
+++ b/babysitting_app/templates/layouts/base.html
@@ -1,12 +1,22 @@
 <!doctype html>
 <html>
   <head>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    {% load compress %}
+    {% load bootstrap4 %}
+    {% compress css %}
+      {% bootstrap_css %}
+      <link rel="stylesheet" type="text/css" href="/static/css/index.css">
+    {% endcompress %}
+    {% compress js %}
+      {% bootstrap_jquery %}
+      {% bootstrap_javascript %}
+      <script type="module" src="/static/javascripts/index.js"></script>
+    {% endcompress %}
   </head>
   <body>
+    {% block header %}{% endblock %}
     <div class="container">
       {% block container %}
-        {% block header %}{% endblock %}
         {% block content %}{% endblock %}
         {% block footer %}{% endblock %}
       {% endblock %}
