--- a/babysitting_app/templates/shared/_header.html
+++ b/babysitting_app/templates/shared/_header.html
@@ -1,3 +1,21 @@
-<div class="w-100 bg-dark text-light">
-  Eventual nav header
-</div>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <span class="navbar-brand">
+    Babysitting Coop
+  </span>
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item">
+      <a class="nav-link" href="/dashboard">Dashboard</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="/family">My Family</a>
+    </li>
+  </ul>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link">Welcome, {{ user.username }}!</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link">Balance: 5000 hours</a>
+    </li>
+  </ul>
+</nav>
